tests/dataset/tpc-ds/compiler/rust/q27.rs
// Generated by Mochi compiler v0.10.26 on 2025-07-15T07:09:21Z
#[derive(Default, Debug, Clone, PartialEq)]
struct StoreSale {
        ss_item_sk: i32,
        ss_store_sk: i32,
        ss_cdemo_sk: i32,
        ss_sold_date_sk: i32,
        ss_quantity: i32,
        ss_list_price: f64,
        ss_coupon_amt: f64,
        ss_sales_price: f64,
}

#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
struct CustomerDemo {
        cd_demo_sk: i32,
        cd_gender: &'static str,
        cd_marital_status: &'static str,
        cd_education_status: &'static str,
}

#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
struct DateDim {
        d_date_sk: i32,
        d_year: i32,
}

#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
struct Store {
        s_store_sk: i32,
        s_state: &'static str,
}

#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
struct Item {
        i_item_sk: i32,
        i_item_id: &'static str,
}

#[derive(Default, Debug, Clone, PartialEq, PartialOrd)]
struct Store_sale {
    ss_item_sk: i32,
    ss_store_sk: i32,
    ss_cdemo_sk: i32,
    ss_sold_date_sk: i32,
    ss_quantity: i32,
    ss_list_price: f64,
    ss_coupon_amt: f64,
    ss_sales_price: f64,
}

#[derive(Default, Debug, Clone, PartialEq, Eq, Hash, PartialOrd, Ord)]
struct Customer_demographic {
    cd_demo_sk: i32,
    cd_gender: &'static str,
    cd_marital_status: &'static str,
    cd_education_status: &'static str,
}

#[derive(Default, Debug, Clone, PartialEq, Eq, Hash, PartialOrd, Ord)]
struct Date_dim {
    d_date_sk: i32,
    d_year: i32,
}

#[derive(Default, Debug, Clone, PartialEq, Eq, Hash, PartialOrd, Ord)]
struct Store1 {
    s_store_sk: i32,
    s_state: &'static str,
}

#[derive(Default, Debug, Clone, PartialEq, Eq, Hash, PartialOrd, Ord)]
struct Item2 {
    i_item_sk: i32,
    i_item_id: &'static str,
}

#[derive(Default, Debug, Clone, PartialEq, Eq, Hash, PartialOrd, Ord)]
struct Key {
    item_id: &'static str,
    state: &'static str,
}

#[derive(Default, Debug, Clone, PartialEq, PartialOrd)]
struct Item3 {
    ss: Store_sale,
    cd: Customer_demographic,
    d: Date_dim,
    s: Store1,
    i: Item2,
}

#[derive(Default, Debug, Clone, PartialEq, PartialOrd)]
struct Group {
    key: Key,
    items: Vec<Item3>,
}

#[derive(Default, Debug, Clone, PartialEq, PartialOrd)]
struct Result {
    i_item_id: &'static str,
    s_state: &'static str,
    agg1: f64,
    agg2: f64,
    agg3: f64,
    agg4: f64,
}

fn avg<T>(v: &[T]) -> f64 where T: Into<f64> + Copy {
    let sum: f64 = v.iter().map(|&x| x.into()).sum();
    sum / v.len() as f64
}

fn _json<T: std::fmt::Debug>(value: &T) {
    println!("{:?}", value);
}

fn main() {
    let store_sales = vec![Store_sale { ss_item_sk: 1, ss_store_sk: 1, ss_cdemo_sk: 1, ss_sold_date_sk: 1, ss_quantity: 5, ss_list_price: 100.0, ss_coupon_amt: 10.0, ss_sales_price: 90.0 }, Store_sale { ss_item_sk: 2, ss_store_sk: 2, ss_cdemo_sk: 2, ss_sold_date_sk: 1, ss_quantity: 2, ss_list_price: 50.0, ss_coupon_amt: 5.0, ss_sales_price: 45.0 }];
    let customer_demographics = vec![Customer_demographic { cd_demo_sk: 1, cd_gender: "F", cd_marital_status: "M", cd_education_status: "College" }, Customer_demographic { cd_demo_sk: 2, cd_gender: "M", cd_marital_status: "S", cd_education_status: "College" }];
    let date_dim = vec![Date_dim { d_date_sk: 1, d_year: 2000 }];
    let store = vec![Store1 { s_store_sk: 1, s_state: "CA" }, Store1 { s_store_sk: 2, s_state: "TX" }];
    let item = vec![Item2 { i_item_sk: 1, i_item_id: "ITEM1" }, Item2 { i_item_sk: 2, i_item_id: "ITEM2" }];
    let result = { let mut tmp1 = std::collections::HashMap::new();for ss in &store_sales { for cd in &customer_demographics { if !(ss.ss_cdemo_sk == cd.cd_demo_sk) { continue; } for d in &date_dim { if !(ss.ss_sold_date_sk == d.d_date_sk) { continue; } for s in &store { if !(ss.ss_store_sk == s.s_store_sk) { continue; } for i in &item { if !(ss.ss_item_sk == i.i_item_sk) { continue; } if !(vec!["CA"].contains(&cd.cd_gender == "F" && cd.cd_marital_status == "M" && cd.cd_education_status == "College" && d.d_year == 2000 && s.s_state)) { continue; } let key = Key { item_id: i.i_item_id, state: s.s_state }; tmp1.entry(key).or_insert_with(Vec::new).push(Item3 {ss: ss.clone(), cd: cd.clone(), d: d.clone(), s: s.clone(), i: i.clone() }); } } } } } let mut tmp2 = Vec::<Group>::new(); for (k,v) in tmp1 { tmp2.push(Group { key: k, items: v }); } tmp2.sort_by(|a,b| a.key.partial_cmp(&b.key).unwrap()); tmp2.sort_by(|a,b| ((a.key.item_id, a.key.state)).partial_cmp(&((b.key.item_id, b.key.state))).unwrap()); let mut result = Vec::new(); for g in tmp2 { result.push(Result { i_item_id: g.key.item_id, s_state: g.key.state, agg1: avg(&{ let mut tmp3 = Vec::new();for x in &g.clone().items { tmp3.push(x.ss_quantity); } tmp3 }), agg2: avg(&{ let mut tmp4 = Vec::new();for x in &g.clone().items { tmp4.push(x.ss_list_price); } tmp4 }), agg3: avg(&{ let mut tmp5 = Vec::new();for x in &g.clone().items { tmp5.push(x.ss_coupon_amt); } tmp5 }), agg4: avg(&{ let mut tmp6 = Vec::new();for x in &g.clone().items { tmp6.push(x.ss_sales_price); } tmp6 }) }); } result };
    _json(&result);
    assert!(result == vec![Result { i_item_id: "ITEM1", s_state: "CA", agg1: 5.0, agg2: 100.0, agg3: 10.0, agg4: 90.0 }]);
}
